--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.1.18",
     "aos": "^3.0.0-beta.6",
+    "pinia": "^3.0.4",
     "swiper": "^12.1.1",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.25",
